{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 45,
  "lineage": "e6cf6ddd-898a-01b3-7eba-1151e6fda725",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:internet-gateway/igw-07f1c718ab72451fe",
            "id": "igw-07f1c718ab72451fe",
            "owner_id": "311948659781",
            "tags": {
              "Name": "joao-dev-igw"
            },
            "tags_all": {
              "Name": "joao-dev-igw"
            },
            "vpc_id": "vpc-01fcf5e0ff7ccc8da"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:route-table/rtb-0b653d8f1eb5bba77",
            "id": "rtb-0b653d8f1eb5bba77",
            "owner_id": "311948659781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f1c718ab72451fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "joao-dev-route-table"
            },
            "tags_all": {
              "Name": "joao-dev-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fcf5e0ff7ccc8da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db50ab8205703774",
            "route_table_id": "rtb-0b653d8f1eb5bba77",
            "subnet_id": "subnet-058023559cce496b8"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-route-table",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f9a9bc262acebc4",
            "route_table_id": "rtb-0b653d8f1eb5bba77",
            "subnet_id": "subnet-0280c24110558d924"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-route-table",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:security-group/sg-0d8b3f93524601108",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b3f93524601108",
            "ingress": [],
            "name": "terraform-20231122212446739400000001",
            "name_prefix": "terraform-",
            "owner_id": "311948659781",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "joao-dev-security-group"
            },
            "tags_all": {
              "Name": "joao-dev-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fcf5e0ff7ccc8da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:subnet/subnet-058023559cce496b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058023559cce496b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311948659781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joao-dev-subnet-0"
            },
            "tags_all": {
              "Name": "joao-dev-subnet-0"
            },
            "vpc_id": "vpc-01fcf5e0ff7ccc8da"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:subnet/subnet-0280c24110558d924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0280c24110558d924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311948659781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joao-dev-subnet-1"
            },
            "tags_all": {
              "Name": "joao-dev-subnet-1"
            },
            "vpc_id": "vpc-01fcf5e0ff7ccc8da"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available-zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311948659781:vpc/vpc-01fcf5e0ff7ccc8da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a2b8b789d7981df",
            "default_route_table_id": "rtb-0a9d4c0fc99199a6e",
            "default_security_group_id": "sg-08fcaf5a9cb025c46",
            "dhcp_options_id": "dopt-07374bbec27381574",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fcf5e0ff7ccc8da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9d4c0fc99199a6e",
            "owner_id": "311948659781",
            "tags": {
              "Name": "joao-dev-vpc"
            },
            "tags_all": {
              "Name": "joao-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}